// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-google-data-manager destination: syncUserData action - all fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
          },
          Object {
            "phoneNumber": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
          },
          Object {
            "address": Object {
              "familyName": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
              "givenName": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
              "postalCode": "Oie[v70SyB",
              "regionCode": "Oie[v70SyB",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Oie[v70SyB",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;

exports[`Testing snapshot for actions-google-data-manager destination: syncUserData action - required fields 1`] = `
Object {
  "audienceMembers": Array [
    Object {
      "consent": Object {
        "adPersonalization": "CONSENT_GRANTED",
        "adUserData": "CONSENT_GRANTED",
      },
      "userData": Object {
        "userIdentifiers": Array [
          Object {
            "emailAddress": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
          },
          Object {
            "phoneNumber": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
          },
          Object {
            "address": Object {
              "familyName": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
              "givenName": "0675265749dc5b687fe84eef65ee4d6fce679012f837c866a8ffcee02c9adc9d",
              "postalCode": "Oie[v70SyB",
            },
          },
        ],
      },
    },
  ],
  "destinations": Array [
    Object {
      "loginAccount": Object {
        "accountId": "8152223833",
        "product": "DATA_PARTNER",
      },
      "operatingAccount": Object {
        "accountId": "Oie[v70SyB",
      },
    },
  ],
  "encoding": "HEX",
  "termsOfService": Object {
    "customerMatchTermsOfServiceStatus": "ACCEPTED",
  },
}
`;
